# Copyright (c) 2025 haogu2025@gmail.com

# pip install pre-commit
# pre-commit install
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haogu_tools"
version = "0.1.0"
description = ""
authors = [
  { name="haogu", email="haogu2025@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

